'change_the_mysql_config'

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/dbo?useUnicode=true&characterEncoding=UTF-8
 db.username=root
-db.password=your_password
+db.password=input_your_password
 
 redis.host=127.0.0.1
 redis.port=6379
